[package]
name = "nchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"

[target.'cfg(not(windows))'.dependencies]
cursive = { version = "0.20" }

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.20", default-features = false, features = [
  "crossterm-backend",
] }
